# gent_disagreement_chat

./: CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
client/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  index.css
docs/: CURRENT_RETRIEVAL_PROCESS_ANALYSIS.md  CURRENT_RETRIEVAL_PROCESS_ANALYSIS_V2.md  EVALUATION_STRATEGIES.md  PRECISION_TRACKING_GUIDE.md  QUESTION_TYPES_AND_RETRIEVAL_STRATEGIES.md  QUESTION_TYPES_AND_RETRIEVAL_STRATEGIES_V2.md  SAMPLE_QUESTIONS.md  SERVER_SIDE_IMPLEMENTATION_ANALYSIS.md  SERVER_SIDE_IMPLEMENTATION_ANALYSIS_V2.md  TODO.md
docs/archive/: CURRENT_RETRIEVAL_PROCESS_ANALYSIS.md  PRECISION_TRACKING_GUIDE.md
docs/retrieval-improvements/: PHASE_1_QUERY_UNDERSTANDING_AND_METADATA_FILTERING.md  PHASE_2_ADAPTIVE_PARAMETERS.md  PHASE_3_DIVERSITY_RANKING.md  SIMPLIFIED_RAG_IMPLEMENTATION_PLAN.md
server/: env.example  evaluation_metrics.db  pyproject.toml
server/.claude/: settings.local.json
server/docs/: podcast_transcript_analysis.md
server/docs/rag_optimization/: RAG_OPTIMIZATION_RECOMMENDATIONS.md
server/docs/rag_optimization/phase_1/: 01_dynamic_threshold_filtering.md  02_improved_context_formatting.md  03_query_enhancement.md  implementation_plan.md
server/src/gent_disagreement_chat/: __init__.py  evaluate_simple.py  evaluation_results_11.21.25.json  main.py
server/src/gent_disagreement_chat/core/: database_manager.py  query_enhancer.py  query_parser.py  rag_service.py  vector_search.py
server/src/gent_disagreement_chat/evaluation/: README.md  __init__.py  evaluation_runner.py  ground_truth_generator.py  precision_tracker.py
server/src/gent_disagreement_rag/: main.py
server/src/gent_disagreement_rag/core/: database_manager.py  embedding_service.py  rag_service.py  vector_search.py
server/src/gent_disagreement_rag/evaluation/: README.md  automated_metrics.py  ground_truth_generator.py  precision_tracker.py
src/gent_disagreement_rag/: main.py
(+17 files in other folders)
