[project]
name = "gent-disagreement-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Joe Webster",email = "joseph.scott.webster@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]

[tool.poetry]
packages = [{include = "gent_disagreement_rag", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
