[project]
name = "gent-disagreement-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "Joe Webster",email = "joseph.scott.webster@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=1.97.1,<2.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "sentence-transformers (>=5.1.1,<6.0.0)"
]

[tool.poetry]
packages = [{include = "gent_disagreement_chat", from = "src"}]

[tool.poetry.scripts]
dev = "gent_disagreement_chat.main:dev"
start = "gent_disagreement_chat.main:start"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
